# duckdb_delta

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/regression/: micro.csv  tpcds_sf1_local.csv  tpch_sf1_local.csv
.github/workflows/: CloudTesting.yml  GeneratedTests.yml  LocalTesting.yml  MainDistributionPipeline.yml  _extension_distribution.yml
benchmark/: README.md  benchmark.Makefile
benchmark/micro/snapshot_performance/: delta_scan.benchmark  delta_scan_filter.benchmark  snapshot_no_pin.benchmark  snapshot_no_pin_filter.benchmark  snapshot_pin.benchmark  snapshot_pin_filter.benchmark
benchmark/tpcds/sf1-delta/: load.sql  q01.benchmark  q02.benchmark  q03.benchmark  q04.benchmark  q05.benchmark  q06.benchmark  q07.benchmark  q08.benchmark  q09.benchmark  q10.benchmark  q11.benchmark  q12.benchmark  q13.benchmark  q14.benchmark  q15.benchmark  q16.benchmark  q17.benchmark  q18.benchmark  q19.benchmark  q20.benchmark  q21.benchmark  q22.benchmark  q23.benchmark  q24.benchmark  q25.benchmark  q26.benchmark  q27.benchmark  q28.benchmark  q29.benchmark  q30.benchmark  q31.benchmark  q32.benchmark  q33.benchmark  q34.benchmark  q35.benchmark  q36.benchmark  q37.benchmark  q38.benchmark  q39.benchmark  (+61 more)
benchmark/tpcds/sf1-parquet/: load.sql  q01.benchmark  q02.benchmark  q03.benchmark  q04.benchmark  q05.benchmark  q06.benchmark  q07.benchmark  q08.benchmark  q09.benchmark  q10.benchmark  q11.benchmark  q12.benchmark  q13.benchmark  q14.benchmark  q15.benchmark  q16.benchmark  q17.benchmark  q18.benchmark  q19.benchmark  q20.benchmark  q21.benchmark  q22.benchmark  q23.benchmark  q24.benchmark  q25.benchmark  q26.benchmark  q27.benchmark  q28.benchmark  q29.benchmark  q30.benchmark  q31.benchmark  q32.benchmark  q33.benchmark  q34.benchmark  q35.benchmark  q36.benchmark  q37.benchmark  q38.benchmark  q39.benchmark  (+61 more)
benchmark/tpch/sf1-delta/: q01.benchmark  q02.benchmark  q03.benchmark  q04.benchmark  q05.benchmark  q06.benchmark  q07.benchmark  q08.benchmark  q09.benchmark  q10.benchmark  q11.benchmark  q12.benchmark  q13.benchmark  q14.benchmark  q15.benchmark  q16.benchmark  q17.benchmark  q18.benchmark  q19.benchmark  q20.benchmark  q21.benchmark  q22.benchmark  tpch_sf1_delta.benchmark.in
benchmark/tpch/sf1-delta-remote/: q01.benchmark  q02.benchmark  q03.benchmark  q04.benchmark  q05.benchmark  q06.benchmark  q07.benchmark  q08.benchmark  q09.benchmark  q10.benchmark  q11.benchmark  q12.benchmark  q13.benchmark  q14.benchmark  q15.benchmark  q16.benchmark  q17.benchmark  q18.benchmark  q19.benchmark  q20.benchmark  q21.benchmark  q22.benchmark  tpch_sf1_delta.benchmark.in
benchmark/tpch/sf1-parquet-remote/: load.sql  q01.benchmark  q02.benchmark  q03.benchmark  q04.benchmark  q05.benchmark  q06.benchmark  q07.benchmark  q08.benchmark  q09.benchmark  q10.benchmark  q11.benchmark  q12.benchmark  q13.benchmark  q14.benchmark  q15.benchmark  q16.benchmark  q17.benchmark  q18.benchmark  q19.benchmark  q20.benchmark  q21.benchmark  q22.benchmark  tpch_sf1_delta.benchmark.in
benchmark/tpch/sf1/delta/: load.sql  q01.benchmark  q02.benchmark  q03.benchmark  q04.benchmark  q05.benchmark  q06.benchmark  q07.benchmark  q08.benchmark  q09.benchmark  q10.benchmark  q11.benchmark  q12.benchmark  q13.benchmark  q14.benchmark  q15.benchmark  q16.benchmark  q17.benchmark  q18.benchmark  q19.benchmark  q20.benchmark  q21.benchmark  q22.benchmark  tpch_sf1_delta.benchmark.in
benchmark/tpch/sf1/delta-remote/: load.sql  q01.benchmark  q02.benchmark  q03.benchmark  q04.benchmark  q05.benchmark  q06.benchmark  q07.benchmark  q08.benchmark  q09.benchmark  q10.benchmark  q11.benchmark  q12.benchmark  q13.benchmark  q14.benchmark  q15.benchmark  q16.benchmark  q17.benchmark  q18.benchmark  q19.benchmark  q20.benchmark  q21.benchmark  q22.benchmark  tpch_sf1_delta.benchmark.in
benchmark/tpch/sf1/parquet-remote/: q01.benchmark  q02.benchmark  q03.benchmark  q04.benchmark  q05.benchmark  q06.benchmark  q07.benchmark  q08.benchmark  q09.benchmark  q10.benchmark  q11.benchmark  q12.benchmark  q13.benchmark  q14.benchmark  q15.benchmark  q16.benchmark  q17.benchmark  q18.benchmark  q19.benchmark  q20.benchmark  q21.benchmark  q22.benchmark  tpch_sf1_delta.benchmark.in
patches/delta_kernel_rs/: enable_s3.patch
scripts/: apply_patches.py  create_minio_credential_file.sh  generate_test_data.py  plot.py  regression_test_runner.py  upload_test_files_to_azurite.sh  upload_test_files_to_minio.sh
src/: delta_extension.cpp  delta_functions.cpp  delta_utils.cpp  deltatable_extension.cpp  deltatable_functions.cpp
src/functions/: delta_scan.cpp  deltatable_scan.cpp  expression_functions.cpp
src/include/: delta_extension.hpp  delta_functions.hpp  delta_kernel_ffi.hpp  delta_utils.hpp  deltatable_extension.hpp  deltatable_functions.hpp  parquet_override.hpp
src/include/functions/: delta_scan.hpp  deltatable_scan.hpp
src/include/storage/: delta_catalog.hpp  delta_schema_entry.hpp  delta_table_entry.hpp  delta_transaction.hpp  delta_transaction_manager.hpp
src/inlined_parquet/: README.md  parquet_extension.cpp
src/storage/: delta_catalog.cpp  delta_schema_entry.cpp  delta_table_entry.cpp  delta_transaction.cpp  delta_transaction_manager.cpp
test/sql/: delta_scan_generated.test  delta_scan_generated_dv.test  delta_scan_generated_remote.test  delta_scan_parquet_params.test  delta_scan_simple_part_generated.test  delta_scan_simple_part_struct_generated.test  deltatable.test  deltatable_with_dv.test  deltatable_with_part.test
test/sql/cloud/: gcs.test
test/sql/cloud/azure/: access_token_auth.test  cli_auth.test  hierarchical_namespace.test  spn_auth.test  unauthenticated.test
test/sql/cloud/azurite/: azurite.test
test/sql/dat/: all.test  attach.test  basic_append.test  custom_parameters.test  nested_types.test  primitive_types.test  test_custom_delta_scan_param.test
test/sql/delta_kernel_rs/: basic_partitioned.test  simple_with_dv.test  simple_without_dv.test  timestamp_ntz.test
test/sql/main/: test_expression.test
(+878 files in other folders)
